# Lingxi-Proofreading-Platform

./: .gitignore  README.md  app.py  dev.py  init_database.py  models.py  pyproject.toml  requirements.txt  run.py  start.sh  test_app.py
ai_services/: __init__.py  base.py  deepseek_service.py  openai_service.py  qwen_service.py
doc/: MODEL_EDIT_DELETE_GUIDE.md  MODEL_MANAGEMENT_FEATURES.md  QUICKSTART.md  README.md  USAGE_EXAMPLES.md  prd.md
lingxi/: app.py  config.py  helpers.py  logging_config.py  models.py  utils.py
lingxi/ai_services/: __init__.py  base.py  custom_openai_service.py  deepseek_service.py  gemini_service.py  http_ai_service.py  openai_service.py  zhipu_service.py
lingxi/static/js/: main.js
lingxi/templates/: 500.html  index.html  settings.html
static/css/: style.css
templates/: 404.html  base.html  history.html  login.html  register.html  settings.html
